# Kripke

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  COPYRIGHT  LICENSE  NOTICE  NOTICE.html  README  README.html  README.md  RELEASE  llnl-chaos5-ic16-mvapich2.sh  llnl-chaos5-nvcc-gcc-4.9.3-mvapich2.sh  llnl-chaos5-nvcc-ic15-mvapich2.sh  llnl-chaos5-nvcc-ic16-mvapich2.sh  llnlcudaenv.sh  macos-clang.sh  setup-bgq-clang-omp.sh  setup-bgq-gcc-omp.sh  setup-chaos5-clang4.7.0-omp.sh  setup-chaos5-gcc4.9.3-omp.sh  setup-chaos5-ic15-mvapich.sh  setup-chaos5-ic16-omp.sh  setup-chaos5-nvcc-gcc-mvapich.sh  setup-chaos5-nvcc-ic15-mvapich.sh  setup-macos-clang.sh  setup.py  tarball.py
.gitlab/: lassen-jobs.yml  quartz-jobs.yml
cmake/: CUDA.cmake  OpenMP.cmake  bdiv_pkg.cmake
cmake/Modules/: FindCUDA.cmake  FindHDF5.cmake  FindMPI.cmake  FindPAPI.cmake  FindPerfTools.cmake  FindSilo.cmake  FindTCMalloc.cmake
cmake/Toolchain/: bgqos_0-clang.cmake  bgqos_0-gcc.cmake  bgqos_0-xlc.cmake  chaos_5_x86_64-ic12.cmake  chaos_5_x86_64-ic14.cmake  chaos_5_x86_64_ib-clang.cmake  chaos_5_x86_64_ib-gcc-4.9.3.cmake  chaos_5_x86_64_ib-gcc.cmake  chaos_5_x86_64_ib-ic12.cmake  chaos_5_x86_64_ib-ic14.cmake  chaos_5_x86_64_ib-ic15.cmake  chaos_5_x86_64_ib-ic16.cmake  chaos_5_x86_64_ib-pgi.cmake  linux-gcc.cmake  macos-clang.cmake  ppc64el-gcc.cmake  ppc64el-xlc.cmake
cmake/modules/: Findchai.cmake
doc/: README
host-configs/: CMakeCache.txt  bgqos.cmake  llnl-bgqos-clang.cmake  llnl-bgqos.cmake  llnl-blueos-P100-nvcc-clang.cmake  llnl-blueos-V100-nvcc-clang.cmake  llnl-blueos-clang.cmake  llnl-blueos-nvcc-clang.cmake  llnl-toss3-MI100-rocm4-nevada.cmake  llnl-toss3-MI100-rocm4-whamo.cmake  llnl-toss3-MI100-rocm4.cmake  llnl-toss3-clang13.cmake  llnl-toss3-clang4.cmake  llnl-toss3-clang8.cmake  llnl-toss3-gcc7.1.cmake  llnl-toss3-gcc8.1.cmake  llnl-toss3-intel18.cmake  llnl-toss4-MI100-rocm4-nevada.cmake  llnl-toss4-MI100-rocm4-vernal.cmake  llnl-toss4-MI100-rocm4-whamo.cmake  llnl-toss4-MI250X-rocm5-vernal.cmake  llnl-toss4-intel19.cmake  llnl-toss4-intel22.cmake
nevada/tpl/raja/: Makefile  RAJA.pc  cmake_install.cmake
nevada/tpl/raja/exercises/: Makefile  cmake_install.cmake
nevada/tpl/raja/exercises/tutorial_halfday/: Makefile  cmake_install.cmake
nevada/tpl/raja/include/RAJA/: config.hpp
nevada/tpl/raja/share/raja/cmake/: raja-config.cmake
nevada/tpl/raja/tpl/camp/: Makefile  campConfig.cmake  campConfigVersion.cmake  cmake_install.cmake
scripts/: KP0.sh  KP1.sh  KP2.sh  KP3.sh  make_release_tarball.sh  mpi-node-strong-KP0  mpi-node-strong-KP1  mpi-node-strong-KP2  mpi-node-strong-KP3  mpi-node-weak-KP0  mpi-node-weak-KP1  mpi-node-weak-KP2  mpi-node-weak-KP3  plotSweepConcur.py  plotSweepTrace.py  plotruns.py  scale1.sh  serial1.sh  thread1.sh  thread2.sh  update_copyright.sh
scripts/gitlab/: build_and_test.sh
scripts/uberenv/: project.json
src/: .cproject  .project  CMakeLists.txt  Kripke.h  KripkeConfig.h.in  kripke.cpp
src/Domain/: CudaCommon.h  Forall.h  Forall2.h  Forall3.h  Forall4.h  Index.h  Layout.h  TView.h  Tile.h  View.h  genForallN.py  genLayout.py  genView.py  lperm.py
src/Kripke/: ArchLayout.h  Array.cpp  Array.h  BaseVar.h  CMakeLists.txt  ClipLiangBarsky3D.hh  Comm.cpp  Comm.h  DView.h  DataStore.cpp  DataStore.h  Directions.cpp  Directions.h  DomainVar.cpp  DomainVar.h  Driver.cpp  Field.h  Generate.cpp  Generate.h  Grid.cpp  Grid.h  Initialize.cpp  Initialize.h  InputVariables.cpp  InputVariables.h  Input_Variables.cpp  Input_Variables.h  KSN_AnalyticalSolutions.hh  Kernel.cpp  Kernel.cu  Kernel.h  LMat.h  Layout.cpp  Layout.h  ParallelComm.cpp  ParallelComm.h  PartitionSpace.cpp  PartitionSpace.h  Quadrature.cpp  Quadrature.h  (+54 more)
src/Kripke/Arch/: ErrorNorms.h  LPlusTimes.h  LTimes.h  Layout.h  Population.h  Scattering.h  Source.h  SweepSubdomains.h
src/Kripke/Arch/Sequential/: LPlusTimes.h  LTimes.h  Population.h  Scattering.h  Source.h  SweepSubdomains.h
src/Kripke/Core/: ArchLayout.h  BaseVar.cpp  BaseVar.h  Comm.h  DataStore.cpp  DataStore.h  DomainVar.cpp  DomainVar.h  Field.h  PartitionSpace.cpp  PartitionSpace.h  Set.cpp  Set.h  VarLayout.h
src/Kripke/Generate/: Data.cpp  Decomp.cpp  Energy.cpp  Quadrature.cpp  Space.cpp
src/Kripke/Kernel/: DataPolicy.h  ErrorNorms.cpp  Kernel_3d_DGZ.cpp  Kernel_3d_DGZ.h  Kernel_3d_DZG.cpp  Kernel_3d_DZG.h  Kernel_3d_GDZ.cpp  Kernel_3d_GDZ.h  Kernel_3d_GZD.cpp  Kernel_3d_GZD.h  Kernel_3d_ZDG.cpp  Kernel_3d_ZDG.h  Kernel_3d_ZGD.cpp  Kernel_3d_ZGD.h  Kernel_GZ_Base.cpp  Kernel_GZ_Base.h  LPlusTimes.cpp  LPlusTimesPolicy.h  LTimes.cpp  LTimesPolicy.h  LTimesTakeOne.cpp  Population.cpp  Scattering.cpp  ScatteringPolicy.h  Source.cpp  SourcePolicy.h  SweepPolicy.h  SweepSubdomain.cpp  VariablePolicy.h
src/Kripke/Kernel/DGZ/: LPlusTimes.cpp  LTimes.cpp  SweepDD1d.cpp  SweepDD3d.cpp
src/Kripke/Kernel/DZG/: LPlusTimes.cpp  LTimes.cpp  SweepDD1d.cpp  SweepDD3d.cpp
src/Kripke/Kernel/GDZ/: LPlusTimes.cpp  LTimes.cpp  SweepDD1d.cpp  SweepDD3d.cpp
src/Kripke/Kernel/GZD/: LPlusTimes.cpp  LTimes.cpp  SweepDD1d.cpp  SweepDD3d.cpp
src/Kripke/Kernel/ZDG/: LPlusTimes.cpp  LTimes.cpp  SweepDD1d.cpp  SweepDD3d.cpp
src/Kripke/Kernel/ZGD/: LPlusTimes.cpp  LTimes.cpp  SweepDD1d.cpp  SweepDD3d.cpp
src/Kripke/ParallelComm/: BlockJacobiComm.cpp  SweepComm.cpp
src/Kripke/Test/: TestKernels.cpp
src/RAJA/: CMakeLists.txt
src/RAJA/includes/RAJA/: execpolicy.hxx  forall_omp.hxx  forall_seq.hxx  forall_simd.hxx  real_datatypes.hxx
src/RAJA/sources/: LockFreeIndexSetBuilders.cxx  MemUtils.cxx
src/RAJA_nested/include/RAJA/: Forall.hxx  Forall2.hxx  Forall3.hxx  Forall4.hxx  Index.hxx  IndexValue.hxx  Layout.hxx  Tile.hxx  View.hxx  genForallN.py  genLayout.py  genView.py  regenAll.sh
src/tools/: CMakeLists.txt  kripke.cpp  kripkeSearch.cpp  kripkeSweep.cpp  kripkeTestKernels.cpp  sweep_kernel.cpp  testKernels.cpp
tpl/: README.txt
